Finished #485 and worked out bugs: password fields always update, added margins, fixed Chrome width bug, wrapped checkbox in label element

--- a/mediagoblin/static/css/base.css
+++ b/mediagoblin/static/css/base.css
@@ -251,6 +251,11 @@ textarea#comment_content {
   text-align: right;
 }
 
+#password_boolean {
+  margin-top: 4px;
+  width: 20px;
+}
+
 /* comments */
 
 .comment_author {
